# Statistical-Arbitrage-Pairs-Trading-Strategy

./: .gitignore  Pairs_Trading_Strategy.ipynb  pyproject.toml
