[tool.poetry]
name = "pairs-trading-strategy"
version = "0.1.0"
description = ""
authors = ["Anthony Li <110138399+anthonyli01@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.0.0"
pandas = "^2.2.2"
statsmodels = "^0.14.2"
yfinance = "^0.2.40"
datetime = "^5.5"
matplotlib = "^3.9.1"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
